--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -22,6 +22,25 @@
                 </li>
             </ul>
         </nav>
+        <nav>
+            <ul>
+                <li onclick="loadPage('lawyer-profile.html')">
+                    <i class="fa-solid fa-gavel"></i>
+                    <span class="label">lawyer Pending Profile</span>
+                </li>
+            </ul>
+        </nav>
+
+
+        <nav>
+            <ul>
+                <li onclick="loadPage('approved_lawyer_profile.html')">
+                    <i class="fa-solid fa-gavel"></i>
+                    <span class="label">lawyer Pending Profile</span>
+                </li>
+            </ul>
+        </nav>
+        
     </aside>
 
     <!-- Main Content -->
